# cloudflare-ddns

./: .gitignore  BUILD  README  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: cicd.yml  golangci-lint.yml
cmd/: BUILD.bazel  main.go
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
internal/cloudflare/: BUILD.bazel  cloudflare.go  cloudflare_test.go
internal/ip/: ip.go  ip_test.go
