load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/rslarson/cloudflare-ddns/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cloudflare",
        "//vendor/github.com/davecgh/go-spew/spew",
        "//vendor/github.com/urfave/cli/v2:cli",
    ],
)

go_binary(
    name = "cloudflare-ddns",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
