load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cloudflare",
    srcs = ["cloudflare.go"],
    importpath = "github.com/rslarson/cloudflare-ddns/internal/cloudflare",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/cloudflare/cloudflare-go"],
)
